# archipellabs

./: .gitignore  LICENSE  NOTICE  README.md
portal/: .dockerignore  Dockerfile  README.md
portal/backend/: .gitignore  pyproject.toml
portal/backend/app/: cartography.py  config.py  db.py  main.py  queries.py  schemas.py
simulator/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
simulator/data/pim/: attributes.json  categories.json  combinations.json  images.json  products.json
simulator/migrations/: env.py
simulator/migrations/versions/: 0001_journey_activity.py
simulator/openapi/: prestashop_admin_api.json  prestashop_webservice_api.json
simulator/scripts/: clean_generated.py  generate_prestashop_clients.py
simulator/src/: app.py  config.py
simulator/src/external_flows/: contracts.py  topics.py
simulator/src/external_flows/customer_arrivals/: envelope.py  generation.py  identity_pool.py  persona.py  rate.py  scheduler.py
simulator/src/external_flows/customer_journey/: adapter.py  devices.py  journey.py  pool.py  runner.py  session.py  transitions.py
simulator/src/external_flows/customer_journey/models/: journey_activity.py
simulator/src/infrastructure/: db.py
simulator/src/internal_flows/: topics.py
simulator/src/internal_flows/catalog/: client.py  doctor.py  pool.py  prestashop.py  sync.py
simulator/src/internal_flows/stock/: refill.py  scheduler.py
simulator/src/services/browser/: service.py
simulator/src/services/observability/: service.py
simulator/tests/: conftest.py
simulator/tests/component/: test_arrival_flow.py  test_catalog_flow.py
simulator/tests/e2e/: test_activity_db.py  test_catalog.py  test_catalog_doctor.py  test_customer_journey.py  test_prestashop_selectors.py  test_stock.py
simulator/tests/integration/: test_catalog.py  test_catalog_doctor.py  test_customer_journey.py  test_prestashop_selectors.py  test_stock.py
simulator/tests/unit/: test_activity.py  test_adapter.py  test_app.py  test_arrivals_tick.py  test_catalog_e2e.py  test_catalog_sync.py  test_devices.py  test_envelope.py  test_flow_e2e.py  test_identity_pool.py  test_observability.py  test_rate.py  test_run_arrival.py
(+85 files in other folders)
