[project]
name = "archipellabs-simulator"
version = "0.1.0"
description = "Load simulator that drives synthetic customer traffic against the PrestaShop storefront"
requires-python = ">=3.14"
dependencies = [
    "archipellabs-runtime>=0.2.0",
    "prestashop-clients",
    "pydantic-settings>=2.11.0",
    "playwright>=1.49.0",
    "faker>=40.18.0",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
]

[tool.uv]
package = false

[tool.uv.sources]
prestashop-clients = { path = "generated", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.6",
    "mypy>=1.8",
    "fakeredis>=2.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "e2e: hits a live external service — PrestaShop at SHOP_BASE_URL (default https://localhost) and/or the activity Postgres at SIMULATORDB_URL. Lives in tests/e2e/; deselected by default in CI. tests/unit (isolated) and tests/component (in-process flows over a fake Redis) need nothing external.",
]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # line length is the formatter's job

[tool.mypy]
python_version = "3.14"
files = ["src"]
mypy_path = "."
namespace_packages = true
explicit_package_bases = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
