[project]
name = "archipellabs-portal-backend"
version = "0.1.0"
description = "TimberWorks simulator portal — read-only analytics API over the activity database."
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.11",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py314"
line-length = 88
